# bb

./: Cargo.toml  README.md
fixtures/simple.git/: COMMIT_EDITMSG  config  index
fixtures/simple.git/logs/refs/heads/: master
fixtures/simple.git/refs/heads/: master
src/: main.rs
src/api/bitbucket/v1/: client.rs  mod.rs  pull_request.rs  repository.rs
src/git/: git.rs
