[package]
name = "bb"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
clap = { version = "4.0.29", features = ["derive", "cargo", "env"] }
